--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,9 +1,15 @@
 <%= form_with model: task do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :details %>
-  <%= f.text_field :details %>
-  <%= f.label :completed %>
-  <%= f.text_field :completed %>
-  <%= f.submit %>
+  <div class="container-sm">
+    <div class="card">
+      <div class="card-body mb-3">
+        <%= f.label :title, { class: "form-label"} %>
+        <%= f.text_field :title, { class: "form-control", placeholder: "what to do?"} %>
+        <%= f.label :details, { class: "form-label"} %>
+        <%= f.text_field :details, { class: "form-control", placeholder: "How to do it?"}%>
+        <%= f.label :completed, { class: "form-label"} %>
+        <%= f.text_field :completed, { class: "form-control"}%>
+        <%= f.submit %>
+      </div>
+    </div>
+  </div>
 <% end %>
