--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,28 @@
-<h1>Task Details</h1>
-<h2><%= @task.title %></h2>
-<p><%= @task.details %></p>
-<%= link_to "Edit", edit_task_path(@task) %>
-<%= link_to "Back to list", tasks_path(@task) %>
+
+<div class="container">
+  <div class="row">
+    <h2>Task Details</h2>
+    <h4><%= @task.title %></h4>
+    <p class="lead"><%= @task.details %></p>
+  </div>
+    <div class="btn btn-light">
+      <%= link_to "Edit", edit_task_path(@task) %>
+    </div>
+  <div class="row">
+    <p>
+      <% if @task.completed %>
+        <i class="fa-solid fa-check"></i>
+        <%= "You did it!" %>
+      <% else %>
+        <i class="fa-regular fa-square"></i>
+        <%= "Get it done bihhh" %>
+      <% end %>
+    </p>
+  </div>
+    <%= link_to "Back to list", tasks_path(@task) %>
+    <%= link_to "Delete",
+      task_path(@task),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+    %>
+  </div>
+</div>
